# demo-test

./: .dockerignore  .env  .env.example  API_TOKENS_GUIDE.md  CISCO_OPENAI_INTEGRATION.md  DAG_VISUALIZATION_GUIDE.md  Dockerfile  README.md  check_tokens.py  dag_structure.json  dag_visualization.html  docker-compose.yml  docker.sh  execution_trace_20250626_135429.json  execution_trace_20250626_140029.json  gitdocbot.private-key.pem  main.py  nginx.conf  octokit_example.py  pyproject.toml  requirements.txt  setup.py  test_cisco_openai.py  test_native_viz.py  test_setup.py  tool_discovery_cli.py  trace_execution.py  visualize_dag.py
.github/: copilot-instructions.md
agents/: __init__.py  base_agent.py  code_agent.py  data_agent.py  research_agent.py  supervisor.py  writing_agent.py
config/: __init__.py  config.example.ini  config_reader.py  openai.properties  settings.py
core/: __init__.py  graph_builder.py  intent_classifier.py  state.py  tool_discovery.py
src/github_mcp_server/: __init__.py  actions.py  auth.py  config.py  main.py  tools.py  webhooks.py
tests/: __init__.py  test_basic.py  test_supervisor.py  test_supervisor_mocked.py
tools/: __init__.py  example_tools.py
utils/: __init__.py  error_handler.py  llm_client.py  secret_util.py
